Changelog
=========

2.0.0 (unreleased)
------------------

Plone 4 version

- support for z3c.autoinclude [keul]
- removed extreme management workflows definitions [andrea]
- added Site Managers role support [andrea]


1.1.1 (2012-10-03)
------------------

- Fixed forum workflow translations [andrea]


1.1.0 (2012-10-02)
------------------

* removed private and memberposting states from ploneboard workflows [andrea]

1.0.7 (2012-02-06)
------------------

* fixed groupware ploneboard workflows [andrea]

1.0.6 (2012-01-16)
------------------

* fixed Ploneboard: Approve Comment in groupware_forum_workflow [andrea]

1.0.5 (2011-12-19)
------------------

* fixed permission "View" in groupware_workflow [andrea]

1.0.4 (2011-04-05)
------------------

* set folders with groupware_workflow [andrea]

1.0.3 (2011-01-24)
------------------

* fixed XM workflows [andrea]

1.0.2 (2011-01-19)
------------------

* fixed workflows [andrea]

1.0.1 (2011-01-14)
------------------

* set initial state "published" in groupware_workflow [andrea]

1.0.0 (xxxx-xx-xx)
------------------

* Initial release