@@ -1,8 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_workflow" meta_type="Plone Workflow Tool" purge="False">
  <object name="groupware_workflow" meta_type="Workflow"/>
- <object name="groupware_folders_workflow" meta_type="Workflow"/>
- <object name="groupware_portletpage_topics_workflow" meta_type="Workflow"/>
  <object name="groupware_forum_workflow" meta_type="Workflow"/>
  <object name="groupware_conversation_workflow" meta_type="Workflow"/>
  <object name="groupware_comment_workflow" meta_type="Workflow"/>
