@@ -1,94 +1,0 @@
-<?xml version="1.0"?>
-<dc-workflow workflow_id="groupware_folders_workflow"
-			 xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-			 i18n:domain="plone"
-             title="Groupware folders Workflow"
-             description="- Essentially a workflow with no transitions, but has a Definitive state."
-             state_variable="review_state"
-             initial_state="published">
- <permission>Access contents information</permission>
- <permission>Change portal events</permission>
- <permission>List folder contents</permission>
- <permission>Modify portal content</permission>
- <permission>View</permission>
- <state state_id="published" title="Definitive" i18n:attributes="title">
-  <description>Visible to everyone, editable by the EditorAdv.
-</description>
-  <permission-map name="Access contents information"
-                  acquired="True">
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>EditorAdv</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator"</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="True">
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>EditorAdv</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator"</permission-role>
-  </permission-map>
-  <permission-map name="View" acquired="True">
-  </permission-map>
- </state>
- <variable variable_id="action" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Previous transition</description>
-  <default>
-   
-   <expression>transition/getId|nothing</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="actor" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>The ID of the user who performed the previous transition
-</description>
-  <default>
-   
-   <expression>user/getUserName</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="comments" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Comment about the last transition
-</description>
-  <default>
-   
-   <expression>python:state_change.kwargs.get('comment', '')</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="review_history" for_catalog="False"
-           for_status="False" update_always="False">
-  <description>Provides access to workflow history
-</description>
-  <default>
-   
-   <expression>state_change/getHistory</expression>
-  </default>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </variable>
- <variable variable_id="time" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>When the previous transition was performed
-</description>
-  <default>
-   
-   <expression>state_change/getDateTime</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-</dc-workflow>
