@@ -1,147 +1,0 @@
-<?xml version="1.0"?>
-<dc-workflow workflow_id="groupware_workflow"
-			 xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-			 i18n:domain="plone"
-             title="Groupware PortletPage and Topics Workflow"
-             description=" A workflow for PortletPage and Topics in Groupware"
-             state_variable="review_state"
-             initial_state="visible">
- <permission>Access contents information</permission>
- <permission>Change portal events</permission>
- <permission>List folder contents</permission>
- <permission>Modify portal content</permission>
- <permission>View</permission>
- <state state_id="visible" title="Public draft">
-  <description>Visible to everyone, but not approved by the reviewers.
-</description>
-  <exit-transition transition_id="publish"/>
-  <permission-map name="Access contents information"
-                  acquired="True">
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>EditorAdv</permission-role>
-   <permission-role>Site Administrator"</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>EditorAdv</permission-role>
-   <permission-role>Site Administrator"</permission-role>
-  </permission-map>
-  <permission-map name="View" acquired="True">
-  </permission-map>
- </state>
- <state state_id="published" title="Definitive" i18n:attributes="title">
-  <description>Visible to everyone, not editable by the owner.
-</description>
-  <exit-transition transition_id="retract"/>
-  <permission-map name="Access contents information"
-                  acquired="True">
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>EditorAdv</permission-role>
-   <permission-role>Site Administrator"</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="True">
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-  </permission-map>
-  <permission-map name="View" acquired="True">
-  </permission-map>
- </state>
- <transition transition_id="publish"
-             title="Reviewer publishes content"
-             new_state="published" trigger="USER"
-             before_script="" after_script="">
-  <description>Publishing the item makes it visible to other users.
-</description>
-  <action url="%(content_url)s/content_status_modify?workflow_action=publish"
-          category="workflow">Publish</action>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-  </guard>
- </transition>
-
- <transition transition_id="retract"
-             title="Member retracts submission"
-             new_state="visible" trigger="USER"
-             before_script="" after_script="">
-  <description>If you submitted the item by mistake or want to perform additional edits, this will take it back.
-</description>
-  <action url="%(content_url)s/content_status_modify?workflow_action=retract"
-          category="workflow">Retract</action>
-  <guard>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </transition>
- <worklist worklist_id="reviewer_queue" title="">
-  <description>Reviewer tasks</description>
-  <action url="%(portal_url)s/search?review_state=pending"
-          category="global">Pending (%(count)d)</action>
-  <guard>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
-  <match name="review_state" values="pending"/>
- </worklist>
- <variable variable_id="action" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Previous transition</description>
-  <default>
-   
-   <expression>transition/getId|nothing</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="actor" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>The ID of the user who performed the previous transition</description>
-  <default>
-   
-   <expression>user/getUserName</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="comments" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Comment about the last transition</description>
-  <default>
-   
-   <expression>python:state_change.kwargs.get('comment', '')</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="review_history" for_catalog="False"
-           for_status="False" update_always="False">
-  <description>Provides access to workflow history</description>
-  <default>
-   
-   <expression>state_change/getHistory</expression>
-  </default>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </variable>
- <variable variable_id="time" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>When the previous transition was performed</description>
-  <default>
-   
-   <expression>state_change/getDateTime</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-</dc-workflow>
